--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,35 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
+/*.App {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*}*/
 
-.App > div {
-  margin-right: 50px;
-}
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
 
-.error{
-  border: red 2px solid;
-}
-.errorMessage{
-  color:red;
-}
+/*.error{*/
+/*  border: red 2px solid;*/
+/*}*/
+/*.errorMessage{*/
+/*  color:red;*/
+/*}*/
 
-.taskCompleted{
-  opacity:0.3
-}
-.activeFilter{
-  background-color: coral;
-  color:white;
-  border-radius: 5px;
-}
-.filterButton:hover {
-  box-shadow: 0px 3px 5px 3px rgba(213, 149, 95, 0.4);
-  color: #6e1d03;
-  border: 1px dotted;
-  border-radius: 5px;
-}
+/*.taskCompleted{*/
+/*  opacity:0.3*/
+/*}*/
+/*.activeFilter{*/
+/*  background-color: coral;*/
+/*  color:white;*/
+/*  border-radius: 5px;*/
+/*}*/
+/*.filterButton:hover {*/
+/*  box-shadow: 0px 3px 5px 3px rgba(213, 149, 95, 0.4);*/
+/*  color: #6e1d03;*/
+/*  border: 1px dotted;*/
+/*  border-radius: 5px;*/
+/*}*/
+
+/*.ButtonAppBar{*/
+/*  padding-bottom: 15px;*/
+/*}*/
