--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,25 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
+/*.App {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*}*/
 
-.App > div {
-  margin-right: 50px;
-}
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
 
-.errorMessage{
-  color: red;
-}
+/*.errorMessage{*/
+/*  color: red;*/
+/*}*/
 
-.error{
-  border: red 2px solid;
-}
+/*.error{*/
+/*  border: red 2px solid;*/
+/*}*/
 
-.activeFilter{
-  background-color: brown;
-  border-radius: 5px;
-  color: white;
-}
+/*.activeFilter{*/
+/*  background-color: brown;*/
+/*  border-radius: 5px;*/
+/*  color: white;*/
+/*}*/
 
 .buttonFilter{
   border-radius: 5px;
